--- a/SemanticaCSS/loginp.html
+++ b/SemanticaCSS/loginp.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,18 @@
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
 </head>
+
 <body>
-    <img src="img/user-in-a-square.png" alt="" class="perfil">
     <form action="" class="form">
         <h1>Página de Login</h1>
-    <label for="lemail">Digite seu Email:</label><br>
-    <input type="email" name="lemail" id="lemail"><br>
-    <label for="lsenha">Digite sua Senha:</label><br>
-    <input type="password" name="lsenha" id="lsenha"><br>
-    <input type="submit" value="Enviar">
-    <input type="reset" value="Limpar">
-    </form>   
+        <img src="img/user-in-a-square.png" alt="" class="perfil"><br>
+        <label for="lemail">EMAIL:</label><br>
+        <input type="email" name="lemail" id="lemail"><br>
+        <label for="lsenha">SENHA:</label><br>
+        <input type="password" name="lsenha" id="lsenha"><br>
+        <input type="submit" value="Enviar" class="enviar">
+        <input type="reset" value="Limpar" class="limpar">
+    </form>
 </body>
+
 </html>
