--- a/SemanticaCSS/index.html
+++ b/SemanticaCSS/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,27 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <nav id="menu">
-            <img src="img/Lion-shield-luxury-logo-icon-on-transparent-background-PNG-removebg-preview.png" width="60px" alt="">
+            <img src="img/Lion-shield-luxury-logo-icon-on-transparent-background-PNG-removebg-preview.png" width="60px"
+                alt="">
             <a href="" class="linkMenu">Sobre Nós</a>
             <a href="" class="linkMenu">Roupas</a>
             <a href="" class="linkMenu">Móveis</a>
             <a href="" class="linkMenu">Eletrônicos</a>
-            <a href="" class="linkMenu">Contato</a>
-            <a href="" class="linkMenu">Login</a>
+            <a href="contato.html" class="linkMenu">Contato</a>
+            <a href="loginp.html" class="linkMenu">Login</a>
         </nav>
     </header>
     <div class="parte1">
-       <img src="img/92f29ddb610a258421da8f5261f099d6.jpg" alt="">
-       <h1>CUIDADO</h1>
-       <p>Lionel Messi acaba de ficar careca</p> 
+        <img src="img/92f29ddb610a258421da8f5261f099d6.jpg" alt="">
+        <h1>CUIDADO</h1>
+        <p>Lionel Messi acaba de ficar careca</p>
         <img src="img/maxresdefault.jpg" alt="">
         <h1>ANDAM QUE DIZENDO QUE O TUÊ É</h1>
     </div>
 </body>
+
 </html>
