--- a/ResponsividadeMQCSS/index.html
+++ b/ResponsividadeMQCSS/index.html
@@ -11,15 +11,17 @@
 
 <body>
     <div class="banner">
-        <img src="img/25258c0347bd0d0561704838c1dccbf1.png" alt="">
+        <img src="img/82306922_2392621300954521_9117682271908790272_n.jpg" alt="">
         <section>
-            <h1>PAYSANDU</h1>
+            <h1>
+                ANÁLISE
+            </h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam modi laborum voluptatem fugit id velit
-                sed fuga numquam aliquam quaerat inventore labore, libero eius amet quasi eligendi voluptate laboriosam
-                dicta.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. At debitis perferendis, optio quod soluta
+                modi. Blanditiis veniam reiciendis ut tempora saepe fugiat pariatur laborum id praesentium tempore,
+                perspiciatis mollitia modi!
             </p>
-            <a href="a" class="btn-banner" target="_blank">
+            <a href="https://www.youtube.com/watch?v=HHFLHIMVmdM" class="btn-banner" target="_blank">
                 Saiba mais
             </a>
 
