--- a/AtividadeRensponsividade/index.html
+++ b/AtividadeRensponsividade/index.html
@@ -13,6 +13,14 @@
     <header>
         <nav id="menu">
             <img src="img/4582656-desenhoial-de-caveira-vetor-removebg-preview.png" alt="">
+            <div class="linkMenu">
+                <a href="" class="link">Inicio</a>
+                <a href="" class="link">Camisas</a>
+                <a href="" class="link">Moletons</a>
+                <a href="" class="link">Calças</a>
+            </div>
+            <img src="img/kisspng-computer-icons-hamburger-button-menu-new-menu-5b34724be5a1f0.5796308115301637879406-removebg-preview.png"
+                alt="" class="hamburger">
         </nav>
     </header>
     <div class="banner">
