--- a/BootstrapGrid/index.html
+++ b/BootstrapGrid/index.html
@@ -1,13 +1,83 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col" style="background-color: red;">1</div>
+            <div class="col" style="background-color: blue;">2</div>
+            <div class="col" style="background-color: red;">3</div>
+            <div class="col" style="background-color: blue;">4</div>
+            <div class="col" style="background-color: red;">5</div>
+            <div class="col" style="background-color: blue;">6</div>
+            <div class="col" style="background-color: red;">7</div>
+            <div class="col" style="background-color: blue;">8</div>
+            <div class="col" style="background-color: red;">9</div>
+            <div class="col" style="background-color: blue;">10</div>
+            <div class="col" style="background-color: red;">11</div>
+            <div class="col" style="background-color: blue;">12</div>
+        </div>
+        <div class="row">
+            <div class="col-4" style="background-color: green;">4</div>
+            <div class="col-4" style="background-color: yellow;">4</div>
+            <div class="col-4" style="background-color: green;">4</div>
+        </div>
+        <div class="row">
+            <div class="col-4" style="background-color: brown;">4</div>
+            <div class="col-8" style="background-color: crimson;">8</div>
+        </div>
+        <div class="row">
+            <div class="col-6" style="background-color: cyan;">6</div>
+            <div class="col-6" style="background-color: darkcyan;">6</div>
+        </div>
+        <div class="row">
+            <div class="col-12" style="background-color: steelblue;">12</div>
+        </div>
+        <div class="row">
+            <div class="col-4" style="background-color: chocolate;">4</div>
+            <div class="col-4 offset-4" style="background-color: darkgoldenrod;">4</div>
+        </div>
+        <div class="row">
+            <div class="col-3 offset-3" style="background-color: darkblue;">3</div>
+            <div class="col-3 offset-3" style="background-color: darkblue;">3</div>
+        </div>
+        <div class="row">
+            <div class="col-4 offset-4" style="background-color: darkgreen;">4</div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6" style="background-color: red;">coluna1</div>
+            <div class="col-12 col-md-6" style="background-color: blue;">coluna2</div>
+        </div>
+    </div>
+    <br><br>
+    <div class="container">
+        <div class="row">
+            <div class="col-4" style="border-style: solid;background-color: black; border-color: white;height: 80px;">1
+            </div>
+            <div class="col-4" style="border-style: solid;background-color: black; border-color: white;height: 80px;">1
+            </div>
+            <div class="col-4" style="border-style: solid;background-color: black; border-color: white;height: 80px;">1
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4" style="border-style: solid;background-color: black; border-color: white;height: 80px;">1
+            </div>
+            <div class="col-8">
+                <div class="row">
+                    <div class="col-8"></div>
+                    <div class="col-4"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
