--- a/AtividadeBootsrap/cards.html
+++ b/AtividadeBootsrap/cards.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -8,14 +8,15 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="img/associazione-calcio-milan-4096.png" alt="" height="40"
-                        width="100%"></a>
+                <a class="navbar-brand" href="index.html"><img src="img/Sem_Título-1-removebg-preview.png" alt=""
+                        height="40" width="100%"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -29,18 +30,18 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="cards.html"
-                                style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">Jogadores</a>
+                                style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">Loja</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#"
+                            <a class="nav-link active" aria-current="page" href="cadastro.html"
                                 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">Cadastro</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#"
+                            <a class="nav-link active" aria-current="page" href="login.html"
                                 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#"
+                            <a class="nav-link active" aria-current="page" href="contato.html"
                                 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">Contato</a>
                         </li>
 
@@ -58,9 +59,12 @@
             <div class="row">
                 <div class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="img/" class="card-img-top" alt="...">
+                        <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Mike Maignan</h5>
+                            <h5 class="card-title">Card title</h5>
+
+                            <a href="#" class="btn btn-success">Adicionar ao
+                                carrinho</a>
                         </div>
                     </div>
                 </div>
@@ -68,7 +72,10 @@
                     <div class="card" style="width: 18rem;">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Theo Hernández</h5>
+                            <h5 class="card-title">Card title</h5>
+
+                            <a href="#" class="btn btn-success">Adicionar ao
+                                carrinho</a>
                         </div>
                     </div>
                 </div>
@@ -76,7 +83,10 @@
                     <div class="card" style="width: 18rem;">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Fikayo Tomori</h5>
+                            <h5 class="card-title">Card title</h5>
+
+                            <a href="#" class="btn btn-success">Adicionar ao
+                                carrinho</a>
                         </div>
                     </div>
                 </div>
@@ -86,7 +96,10 @@
                     <div class="card" style="width: 18rem;">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Davide Calabria</h5>
+                            <h5 class="card-title">Card title</h5>
+
+                            <a href="#" class="btn btn-success">Adicionar ao
+                                carrinho</a>
                         </div>
                     </div>
                 </div>
@@ -94,7 +107,10 @@
                     <div class="card" style="width: 18rem;">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Brahim Díaz</h5>
+                            <h5 class="card-title">Card title</h5>
+
+                            <a href="#" class="btn btn-success">Adicionar ao
+                                carrinho</a>
                         </div>
                     </div>
                 </div>
@@ -102,7 +118,10 @@
                     <div class="card" style="width: 18rem;">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Charles De Ketelaere</h5>
+                            <h5 class="card-title">Card title</h5>
+
+                            <a href="#" class="btn btn-success">Adicionar ao
+                                carrinho</a>
                         </div>
                     </div>
                 </div>
@@ -112,7 +131,10 @@
                     <div class="card" style="width: 18rem;">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Alexis Saelemaekers</h5>
+                            <h5 class="card-title">Card title</h5>
+
+                            <a href="#" class="btn btn-success">Adicionar ao
+                                carrinho</a>
                         </div>
                     </div>
                 </div>
@@ -120,7 +142,10 @@
                     <div class="card" style="width: 18rem;">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Sandro Tonali</h5>
+                            <h5 class="card-title">Card title</h5>
+
+                            <a href="#" class="btn btn-success">Adicionar ao
+                                carrinho</a>
                         </div>
                     </div>
                 </div>
@@ -128,7 +153,10 @@
                     <div class="card" style="width: 18rem;">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Ismaël Bennacer</h5>
+                            <h5 class="card-title">Card title</h5>
+
+                            <a href="#" class="btn btn-success">Adicionar ao
+                                carrinho</a>
                         </div>
                     </div>
                 </div>
@@ -138,7 +166,10 @@
                     <div class="card" style="width: 18rem;">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Rafael Leão</h5>
+                            <h5 class="card-title">Card title</h5>
+
+                            <a href="#" class="btn btn-success">Adicionar ao
+                                carrinho</a>
                         </div>
                     </div>
                 </div>
@@ -146,7 +177,9 @@
                     <div class="card" style="width: 18rem;">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Olivier Giroud</h5>
+                            <h5 class="card-title">Card title</h5>
+
+                            <a href="#" class="btn btn-success">Adicionar ao carrinho</a>
                         </div>
                     </div>
                 </div>
@@ -154,11 +187,31 @@
                     <div class="card" style="width: 18rem;">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Zlatan Ibrahimović</h5>
+                            <h5 class="card-title">Card title</h5>
+
+                            <a href="#" class="btn btn-success">Adicionar ao
+                                carrinho</a>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <footer class="py-3 my-4">
+                <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                    <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+                    <li class="nav-item"><a href="cards.html" class="nav-link px-2 text-body-secondary">Roupas</a></li>
+                    <li class="nav-item"><a href="cadastro.html" class="nav-link px-2 text-body-secondary">Cadastro</a>
+                    </li>
+                    <li class="nav-item"><a href="login.html" class="nav-link px-2 text-body-secondary">Login</a></li>
+                    <li class="nav-item"><a href="contato.html" class="nav-link px-2 text-body-secondary">Contato</a>
+                    </li>
+                </ul>
+                <p class="text-center text-body-secondary">Feito por Ryan Gabriel © 2023</p>
+            </footer>
         </div>
     </section>
 </body>
