--- a/AtividadeBootsrap/cards.html
+++ b/AtividadeBootsrap/cards.html
@@ -59,69 +59,31 @@
             <div class="row">
                 <div class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/the-boys-6.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">The Boys</h5>
 
-                            <a href="#" class="btn btn-success">Adicionar ao
-                                carrinho</a>
+                            <a href="#" class="btn btn-danger">Assistir</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/yu-yu-hakusho-quanto-tempo-maratona_z7nn.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Yu Yu Hakusho</h5>
 
-                            <a href="#" class="btn btn-success">Adicionar ao
-                                carrinho</a>
+                            <a href="#" class="btn btn-danger">Assistir</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/vikings_4YsCmAs.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Vikings</h5>
 
-                            <a href="#" class="btn btn-success">Adicionar ao
-                                carrinho</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-4">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-
-                            <a href="#" class="btn btn-success">Adicionar ao
-                                carrinho</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-
-                            <a href="#" class="btn btn-success">Adicionar ao
-                                carrinho</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-
-                            <a href="#" class="btn btn-success">Adicionar ao
-                                carrinho</a>
+                            <a href="#" class="btn btn-danger">Assistir</a>
                         </div>
                     </div>
                 </div>
@@ -129,34 +91,31 @@
             <div class="row">
                 <div class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/the-last-of-us-001.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">The Last Of Us</h5>
 
-                            <a href="#" class="btn btn-success">Adicionar ao
-                                carrinho</a>
+                            <a href="#" class="btn btn-danger">Assistir</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/Spider-Man-Tobey-Maguire-Homem-Aranha-2021.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Homem-Aranha</h5>
 
-                            <a href="#" class="btn btn-success">Adicionar ao
-                                carrinho</a>
+                            <a href="#" class="btn btn-danger">Assistir</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/poltrona-horadeaventura.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Hora de Aventura</h5>
 
-                            <a href="#" class="btn btn-success">Adicionar ao
-                                carrinho</a>
+                            <a href="#" class="btn btn-danger">Assistir</a>
                         </div>
                     </div>
                 </div>
@@ -164,33 +123,63 @@
             <div class="row">
                 <div class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/tileburnedin.jfif" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Eu Sou A Lenda</h5>
 
-                            <a href="#" class="btn btn-success">Adicionar ao
-                                carrinho</a>
+                            <a href="#" class="btn btn-danger">Assistir</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/AAAABbFI2wcwiGkHDdGWaw58hWgLETOBsbqqv6GbKnZFn3s_Y4fjw0Ys9DNYD5txnfV3oj9tgsBeaSnPcBOwQqQnpHVqHeQr9FtvVzaL.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Breaking Bad</h5>
 
-                            <a href="#" class="btn btn-success">Adicionar ao carrinho</a>
+                            <a href="#" class="btn btn-danger">Assistir</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="img/AAAABWmawbuSjXbaKM5-8FzsgTMBfrUXvoFcF-dspkOCS45dagrsk2BoClO7RR3enf0CxFDChNR7zuGqacHkUIbwrWgKkSzGKJZdpPkAEmh6W5hWlkHlSViZm34Y.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Bojack Horseman</h5>
+
+                            <a href="#" class="btn btn-danger">Assistir</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/peaky-blinders.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Peaky Blinders</h5>
+
+                            <a href="#" class="btn btn-danger">Assistir</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/guardioes-da-galaxia-poster.webp" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Guardiões da Galáxia</h5>
+
+                            <a href="#" class="btn btn-danger">Assistir</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/apenasumshow.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
 
-                            <a href="#" class="btn btn-success">Adicionar ao
-                                carrinho</a>
+                            <a href="#" class="btn btn-danger">Assistir</a>
                         </div>
                     </div>
                 </div>
