--- a/AtividadeBootsrap/index.html
+++ b/AtividadeBootsrap/index.html
@@ -15,8 +15,8 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img src="img/Sem_Título-1-removebg-preview.png" alt="" height="40"
-                        width="100%"></a>
+                <a class="navbar-brand" href="index.html"><img src="img/Sem_Título-1-removebg-preview.png" alt=""
+                        height="40" width="100%"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
                 <div id="carouselExampleCaptions" class="carousel slide">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                            class="active btn btn-light" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
                             aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
@@ -68,19 +68,24 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="img/1440x500_HEROSEMTEXTO.jpg" class="d-block w-100" alt="...">
+                            <img src="img/vatman.webp" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
+                                <h3>Batman</h3>
+                                <p>Some representative placeholder content for the first slide.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/milan-volta-a-ser-campeao-italiano-apos-11-anos-apos-derrotar-o-sassuolo-com-facilidade-b51d1.jpg"
-                                class="d-block w-100" alt="...">
+                            <img src="..." class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
+                                <h5>Second slide label</h5>
+                                <p>Some representative placeholder content for the second slide.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/Milan_Spogliatoi_1280x560.jpg" class="d-block w-100" alt="...">
+                            <img src="..." class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
+                                <h5>Third slide label</h5>
+                                <p>Some representative placeholder content for the third slide.</p>
                             </div>
                         </div>
                     </div>
@@ -113,7 +118,8 @@
                         <div class="accordion-body">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis consequatur deserunt
                             culpa sequi sit provident mollitia sint vel eos esse quis fuga harum, adipisci eius,
-                            maiores, aperiam facilis laudantium reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis consequatur deserunt
+                            maiores, aperiam facilis laudantium reiciendis.Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Perspiciatis consequatur deserunt
                             culpa sequi sit provident mollitia sint vel eos esse quis fuga harum, adipisci eius,
                             maiores, aperiam facilis laudantium reiciendis.
                         </div>
@@ -164,9 +170,11 @@
                 <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                     <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
                     <li class="nav-item"><a href="cards.html" class="nav-link px-2 text-body-secondary">Roupas</a></li>
-                    <li class="nav-item"><a href="cadastro.html" class="nav-link px-2 text-body-secondary">Cadastro</a></li>
+                    <li class="nav-item"><a href="cadastro.html" class="nav-link px-2 text-body-secondary">Cadastro</a>
+                    </li>
                     <li class="nav-item"><a href="login.html" class="nav-link px-2 text-body-secondary">Login</a></li>
-                    <li class="nav-item"><a href="contato.html" class="nav-link px-2 text-body-secondary">Contato</a></li>
+                    <li class="nav-item"><a href="contato.html" class="nav-link px-2 text-body-secondary">Contato</a>
+                    </li>
                 </ul>
                 <p class="text-center text-body-secondary">Feito por Ryan Gabriel © 2023</p>
             </footer>
