Pagina Evento1 Feita

--- a/SiteDeEventos/cadastro.html
+++ b/SiteDeEventos/cadastro.html
@@ -37,8 +37,7 @@
     <section class="text-center" style="background-color:#212529;">
         <div class="p-5 bg-image" style="
           background-image: url('https://wallpaperaccess.com/full/127051.jpg');
-          height: 300px;
-          "></div>
+          height: 300px;"></div>
         <div class="card mx-4 mx-md-5 shadow-5-strong" style="
           margin-top: -100px;
           background: hsla(0, 7%, 22%, 0.8);
