Pagina de Eventos em produção

--- a/SiteDeEventos/evento1.html
+++ b/SiteDeEventos/evento1.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Evento</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="SiteDeEventos/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
