--- a/SiteDeEventos/eventos.html
+++ b/SiteDeEventos/eventos.html
@@ -36,52 +36,14 @@
     </div>
   </header>
 
-
-  <section class="cards" style=" margin-top: 20px;">
+  <br>
+  <section class="cards">
     <div class="container">
-      <!-- 1º Linha -->
-      <div class="row justify-content-space-evenly">
-        <!-- Card1 -->
-        <div class="col-md-3">
+      <div class="row">
+        <div class="col-4">
           <div class="card-sl">
             <div class="card-image">
-              <img src="img/Evento01.jpg" />
-            </div>
-            <div class="card-heading">
-              EVENTO 1
-            </div>
-            <div class="card-text">
-              [...] Descrição do evento [...]
-            </div>
-            <div class="card-text">
-              Local do evento | Data do Evento
-            </div>
-          </div>
-        </div>
-
-        <!-- Card2 -->
-        <div class="col-md-3">
-          <div class="card-sl">
-            <div class="card-image">
-              <img src="https://akamai.sscdn.co/letras/250x250/fotos/e/8/f/c/e8fcecc542a9599728c1792ee0a056b0.jpg" />
-            </div>
-            <div class="card-heading">
-              EVENTO 2
-            </div>
-            <div class="card-text">
-              [...] Descrição do evento [...]
-            </div>
-            <div class="card-text">
-              Local do evento | Data do Evento
-            </div>
-          </div>
-        </div>
-
-        <!-- Card3 -->
-        <div class="col-md-3">
-          <div class="card-sl">
-            <div class="card-image">
-              <img src="img/evento03.jpg" />
+              <img src="img/ImgEventos/evento03.webp" />
             </div>
             <div class="card-heading">
               EVENTO 3
@@ -92,71 +54,13 @@
             <div class="card-text">
               Local do evento | Data do Evento
             </div>
+            <a href="#" class="card-button"> Ver Evento</a>
           </div>
         </div>
-        <!-- Card 4 -->
-        <div class="col-md-3">
+        <div class="col-4">
           <div class="card-sl">
             <div class="card-image">
-              <img src="https://akamai.sscdn.co/letras/250x250/fotos/e/8/f/c/e8fcecc542a9599728c1792ee0a056b0.jpg" />
-            </div>
-            <div class="card-heading">
-              EVENTO 2
-            </div>
-            <div class="card-text">
-              [...] Descrição do evento [...]
-            </div>
-            <div class="card-text">
-              Local do evento | Data do Evento
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Fim da 1ºLinha -->
-
-      <!-- 2º Linha -->
-      <div class="row justify-content-space-evenly" style=" margin-top: 20px;">
-        <!-- Card1 -->
-        <div class="col-md-3">
-          <div class="card-sl">
-            <div class="card-image">
-              <img src="img/Evento01.jpg" />
-            </div>
-            <div class="card-heading">
-              EVENTO 1
-            </div>
-            <div class="card-text">
-              [...] Descrição do evento [...]
-            </div>
-            <div class="card-text">
-              Local do evento | Data do Evento
-            </div>
-          </div>
-        </div>
-
-        <!-- Card2 -->
-        <div class="col-md-3">
-          <div class="card-sl">
-            <div class="card-image">
-              <img src="https://akamai.sscdn.co/letras/250x250/fotos/e/8/f/c/e8fcecc542a9599728c1792ee0a056b0.jpg" />
-            </div>
-            <div class="card-heading">
-              EVENTO 2
-            </div>
-            <div class="card-text">
-              [...] Descrição do evento [...]
-            </div>
-            <div class="card-text">
-              Local do evento | Data do Evento
-            </div>
-          </div>
-        </div>
-
-        <!-- Card3 -->
-        <div class="col-md-3">
-          <div class="card-sl">
-            <div class="card-image">
-              <img src="img/evento03.jpg" />
+              <img src="img/ImgEventos/Evento01.webp" />
             </div>
             <div class="card-heading">
               EVENTO 3
@@ -167,71 +71,13 @@
             <div class="card-text">
               Local do evento | Data do Evento
             </div>
+            <a href="#" class="card-button"> Ver Evento</a>
           </div>
         </div>
-        <!-- Card 4 -->
-        <div class="col-md-3">
+        <div class="col-4">
           <div class="card-sl">
             <div class="card-image">
-              <img src="https://akamai.sscdn.co/letras/250x250/fotos/e/8/f/c/e8fcecc542a9599728c1792ee0a056b0.jpg" />
-            </div>
-            <div class="card-heading">
-              EVENTO 2
-            </div>
-            <div class="card-text">
-              [...] Descrição do evento [...]
-            </div>
-            <div class="card-text">
-              Local do evento | Data do Evento
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Fim da 2ºLinha -->
-
-      <!-- 3º Linha -->
-      <div class="row justify-content-space-evenly" style=" margin-top: 20px;">
-        <!-- Card1 -->
-        <div class="col-md-3">
-          <div class="card-sl">
-            <div class="card-image">
-              <img src="img/Evento01.jpg" />
-            </div>
-            <div class="card-heading">
-              EVENTO 1
-            </div>
-            <div class="card-text">
-              [...] Descrição do evento [...]
-            </div>
-            <div class="card-text">
-              Local do evento | Data do Evento
-            </div>
-          </div>
-        </div>
-
-        <!-- Card2 -->
-        <div class="col-md-3">
-          <div class="card-sl">
-            <div class="card-image">
-              <img src="https://akamai.sscdn.co/letras/250x250/fotos/e/8/f/c/e8fcecc542a9599728c1792ee0a056b0.jpg" />
-            </div>
-            <div class="card-heading">
-              EVENTO 2
-            </div>
-            <div class="card-text">
-              [...] Descrição do evento [...]
-            </div>
-            <div class="card-text">
-              Local do evento | Data do Evento
-            </div>
-          </div>
-        </div>
-
-        <!-- Card3 -->
-        <div class="col-md-3">
-          <div class="card-sl">
-            <div class="card-image">
-              <img src="img/evento03.jpg" />
+              <img src="img/ImgEventos/Evento02.webp" />
             </div>
             <div class="card-heading">
               EVENTO 3
@@ -242,27 +88,10 @@
             <div class="card-text">
               Local do evento | Data do Evento
             </div>
-          </div>
-        </div>
-        <!-- Card 4 -->
-        <div class="col-md-3">
-          <div class="card-sl">
-            <div class="card-image">
-              <img src="https://akamai.sscdn.co/letras/250x250/fotos/e/8/f/c/e8fcecc542a9599728c1792ee0a056b0.jpg" />
-            </div>
-            <div class="card-heading">
-              EVENTO 2
-            </div>
-            <div class="card-text">
-              [...] Descrição do evento [...]
-            </div>
-            <div class="card-text">
-              Local do evento | Data do Evento
-            </div>
+            <a href="#" class="card-button"> Ver Evento</a>
           </div>
         </div>
       </div>
-      <!-- Fim da 3ºLinha -->
     </div>
   </section>
 </body>
